# aij_multiagent_rl

./: .gitignore  README.md  README_eng.md  pyproject.toml
aij_multiagent_rl/: agents.py  engine.py  env.py
tests/: test_env.py
